# cmake-sgx-template

./: CMakeLists.txt  README.md
cmake/: README.md  clang_warnings.cmake  env.cmake  find_package.cmake  gcc_warnings.cmake  msvc_warnings.cmake
cmake/modules/: FindSGX.cmake
examples/: CMakeLists.txt
examples/Cxx14SGXDemo/: CMakeLists.txt
examples/Cxx14SGXDemo/App/: App.cpp  App.h  CMakeLists.txt
examples/Cxx14SGXDemo/App/TrustedLibrary/: Libcxx.cpp
examples/Cxx14SGXDemo/Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl  Enclave.h  Enclave.lds  Enclave_debug.lds
examples/Cxx14SGXDemo/Enclave/TrustedLibrary/: Libcxx.cpp  Libcxx.edl
